button alignment fixed.  form field colour brders applied for error states.

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -18,62 +18,75 @@ body {
 
 .header {
     background: $bandsite-black;
-    color: $bandsite-white;  
+    color: $bandsite-white;
+
     &__wrapper {
         width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
         @include tablet {
             flex-direction: row;
             width: 50%;
             justify-content: flex-start;
         }
+
         @include desktop {
             width: 100%;
             max-width: 1280px;
             margin: 0 auto;
         }
     }
+
     &__logo {
         width: 100%;
         display: flex;
         justify-content: center;
         padding: $mobile-component-p;
+
         @include tablet {
             width: 40%;
             justify-content: left;
             padding: $desktop-component-p;
 
         }
+
         @include desktop {
             padding-left: $desktop-wider-p;
             width: 25%;
         }
     }
+
     &__logo-img {
         height: 1.25rem;
         width: 7.5rem;
     }
+
     &__nav {
         width: 100%;
+
         @include tablet {
             width: 50%;
         }
+
         @include desktop {
             width: 30%;
         }
     }
+
     &__nav-list {
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
+
         @include desktop {
             justify-content: flex-start;
         }
     }
+
     &__nav-item {
         width: 49%;
         list-style: none;
@@ -81,29 +94,35 @@ body {
         font-size: $mobile-subheader-size;
         font-weight: $font-normal;
         margin: 0 auto;
+
         @include tablet {
             font-size: $mobile-subheader-size;
             margin: 0 $desktop-component-p;
         }
+
         @include desktop {
             width: 20%;
         }
     }
+
     &__nav-link {
         width: 100%;
         display: inline-block;
         color: $bandsite-mercury;
         text-decoration: none;
         padding: $mobile-component-p 0;
+
         @include tablet {
             padding: $desktop-component-p 0;
         }
+
         &--active {
             font-weight: $font-demi;
             color: $bandsite-white;
             border-bottom: 2px solid $bandsite-white;
         }
-        &:hover{
+
+        &:hover {
             color: $bandsite-white;
             border-bottom: 2px solid $bandsite-white;
 
@@ -115,15 +134,17 @@ body {
 
 // Footer Section -------------------------
 
-.footer{
+.footer {
     background: $bandsite-black;
     color: $bandsite-white;
     margin-top: $mobile-component-p;
-    &__wrapper{
+
+    &__wrapper {
         width: 70%;
         padding: 0 $mobile-component-p $mobile-component-p;
         display: flex;
         flex-direction: column;
+
         @include tablet {
             margin-top: $desktop-headline-p-top;
             width: 100%;
@@ -132,6 +153,7 @@ body {
             flex-wrap: wrap;
             justify-content: space-between;
         }
+
         @include desktop {
             justify-content: flex-start;
             padding: $desktop-headline-p-top $desktop-wider-p $desktop-component-p;
@@ -139,46 +161,56 @@ body {
             margin: 0 auto;
         }
     }
+
     &__heading {
         font-size: $mobile-section-header-size;
         line-height: $mobile-section-header-lh;
         font-weight: $font-bold;
         margin-top: $mobile-headline-p-top;
+
         @include tablet {
             font-size: $desktop-section-header-size;
             line-height: $desktop-section-header-lh;
             font-weight: $font-bold;
             width: 33%;
         }
-        @include desktop {
-            width: 25%;
-        }
-        }
-    &__social-icons{
-        width: 40%;
-        display: flex;
-        justify-content: space-between;
-        margin-top: $mobile-headline-p-top;
-        @include tablet {
-            width: 33%;
-            justify-content: flex-start;
-        }
+
         @include desktop {
             width: 25%;
         }
     }
-    &__social-icon{
+
+    &__social-icons {
+        width: 40%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: $mobile-headline-p-top;
+
+        @include tablet {
+            width: 33%;
+            justify-content: flex-start;
+        }
+
+        @include desktop {
+            width: 25%;
+        }
+    }
+
+    &__social-icon {
         width: $mobile-section-header-size;
         height: $mobile-section-header-size;
-        @include tablet{
+
+        @include tablet {
             width: $desktop-section-header-size;
             height: $desktop-section-header-size;
             margin-right: 2rem;
         }
     }
+
     &__logo {
         margin-top: $mobile-headline-p-top;
         order: 1;
+
         @include tablet {
             order: 0;
             width: 33%;
@@ -186,14 +218,17 @@ body {
             justify-content: flex-end;
             align-content: center;
         }
+
         @include desktop {
             width: 50%;
         }
     }
-    &__logo-img{
+
+    &__logo-img {
         height: 1.25rem;
         width: 7.5rem;
     }
+
     &__contact-card {
         margin-top: $mobile-headline-p-top;
         padding: $mobile-component-p 0 0;
@@ -201,17 +236,21 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
         @include tablet {
             width: 33%;
             height: 10rem;
         }
+
         @include desktop {
             width: 25%;
         }
     }
-    &__copyright{
+
+    &__copyright {
         order: 2;
         padding-top: $mobile-component-p;
+
         @include tablet {
             order: 0;
             width: 100%;
@@ -219,21 +258,26 @@ body {
             align-self: flex-end;
         }
     }
-    &__copy{
+
+    &__copy {
         font-size: $mobile-footer-copy-size;
         line-height: $mobile-footer-copy-lh;
+
         @include tablet {
             font-size: $desktop-footer-copy-size;
             line-height: $desktop-footer-copy-lh;
         }
-        &--name{
+
+        &--name {
             font-weight: $font-demi;
         }
-        &--link{
+
+        &--link {
             font-size: $mobile-footer-copy-size;
             line-height: $mobile-footer-copy-lh;
             text-decoration: none;
             color: $bandsite-white;
+
             @include tablet {
                 font-size: $desktop-footer-copy-size;
                 line-height: $desktop-footer-copy-lh;
@@ -244,16 +288,15 @@ body {
 
 .bs-button {
     border-radius: 4px;
-    height: 2.5rem;
+    min-height: 2.5rem;
+    max-height: 2.5rem;
     width: 100%;
     background-color: $bandsite-black;
     color: $bandsite-white;
     font-size: $mobile-buttons-size;
     line-height: $mobile-buttons-lh;
     font-weight: $font-bold;
-    &:hover{
-        background-color: $bandsite-darkblack;
-    }
+
     @include tablet {
         min-width: 9.375rem;
         max-width: 9.375rem;
@@ -261,4 +304,9 @@ body {
         font-size: $desktop-buttons-size;
         line-height: $desktop-buttons-lh;
     }
+
+    &:hover {
+        background-color: $bandsite-darkblack;
+    }
+
 }
