--- a/styles/shows.css
+++ b/styles/shows.css
@@ -297,16 +297,14 @@ body {
 
 .bs-button {
   border-radius: 4px;
-  height: 2.5rem;
+  min-height: 2.5rem;
+  max-height: 2.5rem;
   width: 100%;
   background-color: #323232;
   color: #FFFFFF;
   font-size: 0.625rem;
   line-height: 1.25rem;
   font-weight: 700;
-}
-.bs-button:hover {
-  background-color: #000000;
 }
 @media (min-width: 768px) {
   .bs-button {
@@ -316,6 +314,9 @@ body {
     font-size: 0.75rem;
     line-height: 1.25rem;
   }
+}
+.bs-button:hover {
+  background-color: #000000;
 }
 
 .shows-hero {
